--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,29 @@
 @font-face {
-  font-family: 'AlegreyaSans';
+  font-family: "AlegreyaSans";
   src: url("/fonts/AlegreyaSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'MuseoSansCyrl';
+  font-family: "MuseoSansCyrl";
   src: url("/fonts/MuseoSansCyrl.otf");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'AlegreyaSansExtraBold';
+  font-family: "AlegreyaSansExtraBold";
   src: url("/fonts/AlegreyaSans-ExtraBold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal; }
 
+@font-face {
+  font-family: "Icons";
+  src: url("/fonts/icomoon.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
+
 body {
-  font-family: 'AlegreyaSans';
+  font-family: "AlegreyaSans";
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -30,7 +36,7 @@ body {
 .header {
   position: absolute;
   width: 100%;
-  padding: 10px; }
+  z-index: 4; }
   .header .navigator {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -38,10 +44,12 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around; }
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
     .header .navigator__logo {
-      font-family: 'MuseoSansCyrl';
+      padding-left: 10px;
+      font-family: "MuseoSansCyrl";
       text-transform: uppercase;
       font-weight: normal;
       font-size: 24px;
@@ -50,7 +58,11 @@ body {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      list-style-type: none; }
+      min-width: 670px;
+      list-style-type: none;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      padding-left: 0px; }
     .header .navigator__item {
       margin: 5px;
       font-size: 18px; }
@@ -70,91 +82,154 @@ body {
         margin: 5px; }
 
 .main {
-  width: 1100px;
+  width: 100%;
   margin: 0 auto; }
-  .main .screen__first {
-    background: url("/img/bg-1.png") no-repeat;
-    background-size: auto;
-    height: 650px;
-    width: 100%; }
-    .main .screen__first .container {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-      align-items: baseline;
+  .main .first {
+    background: #66cccc; }
+  .main .screen {
+    height: 650px; }
+    .main .screen__container {
+      width: 1100px;
+      margin: 0 auto;
       height: 100%;
-      -webkit-box-pack: end;
-      -ms-flex-pack: end;
-      justify-content: flex-end; }
-    .main .screen__first:after {
-      background: url("/img/bg-1-berries.png") no-repeat;
-      height: 353px;
-      width: 1080px;
-      position: absolute;
-      top: 347px;
-      margin-left: 33px;
-      content: ""; }
-    .main .screen__first .chocolate {
-      position: relative;
-      width: 410px;
-      color: white;
-      padding: 5px;
-      z-index: 2; }
-      .main .screen__first .chocolate__header {
-        text-transform: uppercase;
-        font-size: 60px;
-        font-weight: bold;
-        padding: 5px;
-        margin: 0px; }
-      .main .screen__first .chocolate__body {
-        font-size: 21px;
-        padding: 5px;
-        margin: 0px; }
-      .main .screen__first .chocolate__button {
-        text-transform: uppercase;
-        font-size: 19px;
-        border-left-color: #006633;
-        font-family: 'AlegreyaSansExtraBold';
-        background: white;
-        padding: 20px 35px;
-        border: none;
-        border-radius: 50px; }
-    .main .screen__first .information {
-      z-index: 2;
       position: relative; }
-      .main .screen__first .information__list {
+      .main .screen__container .container {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        list-style-type: none; }
-      .main .screen__first .information__item {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+        align-items: baseline;
+        height: 100%;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
+        justify-content: flex-end; }
+      .main .screen__container .first__background {
+        position: absolute; }
+      .main .screen__container .sheet {
+        background: url("/img/bg-sheet.png") no-repeat;
+        height: 100%;
+        width: 514px;
+        bottom: 0px;
+        right: 0px; }
+      .main .screen__container .candy {
+        background: url("/img/bg-chocolate.png") no-repeat;
+        height: 100%;
+        width: 514px;
+        top: 54px;
+        right: 17px; }
+      .main .screen__container .berries {
+        background: url("/img/bg-berries.png") no-repeat;
+        height: 353px;
+        width: 1080px;
+        top: 347px;
+        margin-left: 33px; }
+      .main .screen__container .scroller_page {
+        position: absolute;
+        top: 193px;
+        right: 24px;
+        height: 100%;
+        width: 100px; }
+        .main .screen__container .scroller_page .scroller {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          list-style-type: none;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center; }
+          .main .screen__container .scroller_page .scroller__item {
+            margin: 8px; }
+          .main .screen__container .scroller_page .scroller__link {
+            text-decoration: none; }
+            .main .screen__container .scroller_page .scroller__link:hover > div {
+              margin: 0 auto; }
+              .main .screen__container .scroller_page .scroller__link:hover > div:after {
+                border: 1px solid white;
+                border-radius: 50%;
+                width: 16px;
+                display: block;
+                height: 16px;
+                margin: 0 auto;
+                content: "";
+                position: absolute;
+                margin-left: -6.5px;
+                margin-top: -6.5px; }
+      .main .screen__container .chocolate {
+        word-wrap: break-word;
+        position: relative;
+        width: 425px;
         color: white;
-        font-size: 16px; }
-      .main .screen__first .information__natural, .main .screen__first .information__delivery, .main .screen__first .information__calorie {
-        width: 92px; }
-      .main .screen__first .information__natural:before {
-        content: "";
-        display: block;
-        background: url("/icons/natural.svg") no-repeat;
-        margin: 5px;
-        height: 43px; }
-      .main .screen__first .information__delivery:before {
-        content: "";
-        display: block;
-        background: url("/icons/delivery.svg") no-repeat;
-        margin: 5px;
-        height: 43px; }
-      .main .screen__first .information__calorie:before {
-        content: "";
-        display: block;
-        background: url("/icons/calorie.svg") no-repeat;
-        margin: 5px;
-        height: 43px; }
-    .main .screen__first path {
-      fill: red; }
+        padding: 5px;
+        z-index: 2; }
+        .main .screen__container .chocolate__header {
+          text-transform: uppercase;
+          font-size: 60px;
+          letter-spacing: 1px;
+          font-weight: bold;
+          padding: 5px 0px 5px 0px;
+          margin: 0px;
+          line-height: 60px; }
+        .main .screen__container .chocolate__body {
+          font-size: 21px;
+          padding: 5px;
+          margin: 0px; }
+        .main .screen__container .chocolate__order {
+          padding: 22px 0px 58px 0; }
+          .main .screen__container .chocolate__order .order__button {
+            text-transform: uppercase;
+            font-size: 19px;
+            border-left-color: #006633;
+            font-family: "AlegreyaSansExtraBold";
+            background: white;
+            padding: 20px 35px;
+            border: none;
+            border-radius: 50px; }
+      .main .screen__container .information {
+        z-index: 2;
+        position: relative;
+        padding-bottom: 45px; }
+        .main .screen__container .information__list {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          list-style-type: none;
+          padding: 0;
+          margin: 0; }
+        .main .screen__container .information__item {
+          color: white;
+          font-size: 16px; }
+        .main .screen__container .information__natural, .main .screen__container .information__delivery, .main .screen__container .information__calorie {
+          min-width: 120px;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          margin: 5px; }
+        .main .screen__container .information__natural:before {
+          content: url("/img/icon-natural.png");
+          margin: 5px;
+          height: 43px; }
+        .main .screen__container .information__delivery:before {
+          content: url("/img/icon-delivery.png");
+          margin: 5px;
+          height: 43px; }
+        .main .screen__container .information__calorie:before {
+          content: url("/img/icon-calorie.png");
+          margin: 5px;
+          height: 43px; }
+  .main .circle {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: white; }
