--- a/css/main.scss
+++ b/css/main.scss
@@ -1,187 +1,252 @@
-@font-face{
-    font-family: 'AlegreyaSans';
-    src:url("/fonts/AlegreyaSans-Regular.ttf") format('truetype');
-    font-weight: normal;
-    font-style: normal;
+$blue: #66cccc;
+@font-face {
+  font-family: "AlegreyaSans";
+  src: url("/fonts/AlegreyaSans-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-@font-face{
-    font-family: 'MuseoSansCyrl';
-    src:url("/fonts/MuseoSansCyrl.otf");
-    font-weight: normal;
-    font-style: normal;
+@font-face {
+  font-family: "MuseoSansCyrl";
+  src: url("/fonts/MuseoSansCyrl.otf");
+  font-weight: normal;
+  font-style: normal;
 }
- @font-face{
-    font-family: 'AlegreyaSansExtraBold';
-    src:url("/fonts/AlegreyaSans-ExtraBold.ttf") format('truetype');
-    font-weight: bold;
-    font-style: normal;
-  
-}       
-
-
-
-
-
-
-body{
-    font-family: 'AlegreyaSans';
-    width:100%;
-    height:100%;
-    margin:0px;
-    padding:0px;
+@font-face {
+  font-family: "AlegreyaSansExtraBold";
+  src: url("/fonts/AlegreyaSans-ExtraBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Icons";
+  src: url("/fonts/icomoon.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
 }
 
-.container{
-    width: 960px;
-    margin:0 auto;
+body {
+  font-family: "AlegreyaSans";
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
-.header{
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
 
-    position: absolute;
-    width:100%;
-    padding: 10px;
+.header {
+  position: absolute;
+  width: 100%;
+  z-index: 4;
+  .navigator {
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &__logo {
+    padding-left:10px;
+        
+      font-family: "MuseoSansCyrl";
+      text-transform: uppercase;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 20px;
+    }
 
-    .navigator{
+    &__menu {
+      display: flex;
+      min-width: 670px;
+      list-style-type: none;
+      justify-content: space-around;
+      padding-left: 0px;
+    }
+
+    &__item {
+      margin: 5px;
+      font-size: 18px;
+    }
+
+    &__link {
+      color: white;
+      text-decoration: none;
+    }
+    &__phone {
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      &:before {
+        content: url("/icons/phone.png");
+        margin: 5px;
+      }
+    }
+  }
+}
+
+.main {
+  width: 100%;
+  margin: 0 auto;
+  .first {
+    background: $blue;
+  }
+  .screen {
+    height: 650px;
+    &__container {
+      width: 1100px;
+      margin: 0 auto;
+      height: 100%;
+      position: relative;
+      .container {
         display: flex;
-        align-items: center;
-        justify-content: space-around;
-        &__logo{
-            font-family: 'MuseoSansCyrl';
-            text-transform: uppercase;
-            font-weight: normal;
-            font-size:24px;
-            line-height: 20px;
+        flex-direction: column;
+        align-items: baseline;
+        height: 100%;
+        justify-content: flex-end;
+      }
 
-            }
+      .first__background {
+        position: absolute;
+      }
+      .sheet {
+        background: url("/img/bg-sheet.png") no-repeat;
+        height: 100%;
+        width: 514px;
+        bottom: 0px;
+        right: 0px;
+      }
+      .candy {
+        background: url("/img/bg-chocolate.png") no-repeat;
+        height: 100%;
+        width: 514px;
+        top: 54px;
+        right: 17px;
+      }
+      .berries {
+        background: url("/img/bg-berries.png") no-repeat;
+        height: 353px;
+        width: 1080px;
+        top: 347px;
+        margin-left: 33px;
+      }
 
-        &__menu{
-            display: flex;
-            list-style-type: none;
-        }
-
-        &__item{
-            margin:5px;
-            font-size: 18px;
-        }
-
-        &__link{
-            color:white;
+      .scroller_page {
+        position: absolute;
+        top: 193px;
+        right: 24px;
+        height: 100%;
+        width: 100px;
+        .scroller {
+          display: flex;
+          list-style-type: none;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          &__item {
+            margin: 8px;
+          }
+          &__link {
             text-decoration: none;
-        }
-        &__phone{
-            display: flex;
-            align-items: center;
-            font-size: 24px;
-            &:before{
-                content:url("/icons/phone.png");
-                margin: 5px;
+            &:hover  > div {
+              
+              margin:0 auto;
+              &:after{
+                  border:1px solid white;
+                  border-radius:50%;
+                  width:16px;
+                  display: block;
+                  height:16px;
+                  margin:0 auto;
+                  content:"";
+                  position: absolute;
+                  margin-left: -6.5px;
+                  margin-top: -6.5px;
+                  
+              }
             }
+          }
         }
+      }
+
+      .chocolate {
+        word-wrap: break-word;
+        position: relative;
+        width: 425px;
+        color: white;
+        padding: 5px;
+        z-index: 2;
+        &__header {
+          text-transform: uppercase;
+          font-size: 60px;
+          letter-spacing: 1px;
+          font-weight: bold;
+          padding: 5px 0px 5px 0px;
+          margin: 0px;
+          line-height: 60px;
+        }
+        &__body {
+          font-size: 21px;
+          padding: 5px;
+          margin: 0px;
+        }
+        &__order {
+          padding: 22px 0px 58px 0;
+          .order__button {
+            text-transform: uppercase;
+            font-size: 19px;
+            border-left-color: #006633;
+            font-family: "AlegreyaSansExtraBold";
+            background: white;
+            padding: 20px 35px;
+            border: none;
+            border-radius: 50px;
+          }
+        }
+      }
+      .information {
+        z-index: 2;
+        position: relative;
+        padding-bottom: 45px;
+        &__list {
+          display: flex;
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
+        }
+        &__item {
+          color: white;
+          font-size: 16px;
+        }
+        &__natural,
+        &__delivery,
+        &__calorie {
+          min-width: 120px;
+          display: flex;
+          margin: 5px;
+        }
+        &__natural:before {
+          content: url("/img/icon-natural.png");
+          margin: 5px;
+          height: 43px;
+        }
+        &__delivery:before {
+          content: url("/img/icon-delivery.png");
+          margin: 5px;
+          height: 43px;
+        }
+        &__calorie:before {
+          content: url("/img/icon-calorie.png");
+          margin: 5px;
+          height: 43px;
+        }
+      }
     }
-}
-
-
-.main{
-   width:1100px;
-   margin:0 auto;
-    .screen{
-
-        &__first{
-            background: url("/img/bg-1.png") no-repeat;
-            background-size: auto;
-            height: 650px;
-            width: 100%;
-
-            .container{
-                display: flex;
-                flex-direction: column;
-                align-items: baseline;
-                height: 100%;
-                justify-content: flex-end;
-            }
-            
-            &:after{
-                    background: url("/img/bg-1-berries.png")  no-repeat;
-                    height:353px;
-                    width:1080px;
-                    position: absolute;
-                    top:347px;
-                    margin-left: 33px;
-                    content:""
-                } 
-            
-            .chocolate{
-                position: relative;
-                width:410px;
-                color:white;
-                padding: 5px;
-                z-index: 2;
-                &__header{
-                    text-transform: uppercase;
-                    font-size:60px;
-                    font-weight: bold;
-                    padding: 5px;
-                    margin:0px;
-                }
-                &__body{
-                    font-size:21px;
-                    padding: 5px;
-                    margin:0px;
-                }
-                &__button{
-                    text-transform: uppercase;
-                    font-size:19px;
-                    border-left-color:#006633;
-                    font-family: 'AlegreyaSansExtraBold';
-                    background: white;
-                    padding: 20px 35px;
-                    border: none;
-                    border-radius: 50px;
-                }
-            }   
-            .information{
-                z-index:2;
-                position: relative;
-                &__list{
-                    display: flex;
-                    list-style-type: none;
-                }
-                &__item{
-                    color:white;
-                    font-size:16px; 
-                }
-                &__natural,&__delivery,&__calorie{
-                    width:92px;
-                }
-                &__natural:before{
-                    content:"";
-                    display:block;
-                    background:url("/icons/natural.svg") no-repeat;
-                    margin: 5px;
-                    height:43px;
-                }
-                &__delivery:before{
-                    content:"";
-                    display:block;
-                    background:url("/icons/delivery.svg") no-repeat;
-                    margin: 5px;
-                    height:43px;
-                }
-                &__calorie:before{
-                    content:"";
-                    display:block;
-                    background:url("/icons/calorie.svg") no-repeat;
-                    margin: 5px;
-                    height:43px;
-                }
-                
-            }
-
-            path{fill:red;}
-            
-    
-    
-        }
-    }
+  }
+  .circle {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: white;
+  }
 }
